Fix whitespace at the bottom of the footer

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -25,7 +25,7 @@ footer.floating {
 }
 
 footer p {
-  margin: 0.25rem 0 0.25rem 1rem;
+  margin: 0.25rem 0 0rem 1rem;
 }
 
 footer a,
